--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,22 +1,26 @@
+---
+import '../styles/global.css';
+import NavBar from '../components/NavBar.astro'
+import Footer from '../components/Footer.astro';
+---
+
 <!doctype html>
-<html lang="en">
+<html lang="es" class="dark">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/theme-toggles@4.10.1/css/within.min.css">
+		<title>Astro Ecommerce</title>
 	</head>
-	<body>
-		<slot />
+	<body class="m-0 w-full h-full bg-background dark:bg-background-dark text-primary dark:text-primary-dark">
+		<NavBar />
+		<main>
+			<slot />
+		</main>
+		<Footer/>
 	</body>
 </html>
 
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
-</style>
+
