--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,8 +1,40 @@
-<footer class="w-full mt-10 border-t-2">
-    <div class="flex flex-row justify-center">
-        <h2>Descubre tu interior</h2>
+---
+
+---
+
+<footer class="w-full mt-5 border-t-2 px-3">
+    <div class="flex">
+        <div class="w-1/6 justify-center py-3 text-center">
+            <p class="font-bold text-4xl">El Oráculo</p>
+            <p class="text-sm">"Descubre tu interior"</p>
+        </div>
+        <div class=" flex w-4/6">
+            <ul class="flex w-full justify-evenly items-center">
+                <a href="#"><li class="px-8">Blog</li></a>
+                <a href="#"><li class="px-8">Agenda tu Hora</li></a>
+                <a href="#"><li class="px-8">Tienda</li></a>
+                <a href="#"><li class="px-8">Contactanos</li></a>
+            </ul>
+        </div>
+        <div class="w-1/6 text-center py-2">
+            <p class="font-bold pt-2">Redes Sociales</p>
+            <div class="flex justify-center gap-5 py-2">
+                <a href="#"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="40" height="40" stroke-width="2">
+                    <path d="M4 4m0 4a4 4 0 0 1 4 -4h8a4 4 0 0 1 4 4v8a4 4 0 0 1 -4 4h-8a4 4 0 0 1 -4 -4z"></path>
+                    <path d="M12 12m-3 0a3 3 0 1 0 6 0a3 3 0 1 0 -6 0"></path>
+                    <path d="M16.5 7.5l0 .01"></path>
+                </svg></a>
+                <a href="#"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="40" height="40" stroke-width="2">
+                    <path d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3"></path>
+                </svg></a>
+                <a href="#"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="40" height="40" stroke-width="2">
+                    <path d="M21 7.917v4.034a9.948 9.948 0 0 1 -5 -1.951v4.5a6.5 6.5 0 1 1 -8 -6.326v4.326a2.5 2.5 0 1 0 4 2v-11.5h4.083a6.005 6.005 0 0 0 4.917 4.917z"></path></a>
+                </svg>
+            </div>
+            
+        </div>
     </div>
-    <div class="text-center pt-5">
+    <div class="text-center pt-3">
         <p>Todos los derechos reservados ® 2025</p>
     </div>
 </footer>
