agregado # a href inicio

--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -1,7 +1,7 @@
 <header>
     <nav class="w-full flex flex-row justify-around py-4 text-xl border-b-2 border-primary dark:border-primary-dark">
         <div>
-            <a href="">El Oráculo</a>
+            <a href="#">El Oráculo</a>
         </div>
         <div>
             <a href="#" class="py-2 px-4 hover:bg-primary hover:text-background dark:hover:bg-primary-dark dark:hover:text-background-dark">Blog</a>
